traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:22: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByLine:25: error: expected start of definition
	override def forward()  {
                 ^TraversalByLine:28: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByLine:31: error: expected start of definition
	override def backward() {
                 ^TraversalByLine:34: error: Unmatched closing brace '}' ignored here
}
^